--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,12 @@
 <%= render '/layouts/nav' %>
 
 <div class="container">
+  <span class="notice"><%= notice %></span>
+  <span class="alert"><%= alert %></span>
   <%= yield %>
-  
 </div>
+
+
 
 </body>
 </html>
