--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,7 +1,7 @@
 <div class = "row">
     <div class = "col-xs-12">
         <div class="jumbotron">
-          <p>Flutter</p>
+          <%= @username %>
         </div>
     </div>
 </div>
