--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,4 @@
-Dynamic navigation depending on whether a person is a user or a guest-->
+<!--Dynamic navigation depending on whether a person is a user or a guest-->
 
 <% if !user_signed_in? %>
     <%= render '/layouts/nav_guest' %>
