--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,15 +6,24 @@
             <p>stats</p>
           </div>
         </div>
-    </div>
-    <div class = "col-xs-6">
         
         <div class="panel panel-default">
           <div class="panel-body">
-            <p>tweets</p>
+            <p>trends</p>
           </div>
         </div>
     </div>
+    
+    <div class = "col-xs-6">
+      <% for @p in @posts %>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <p> <%= @p.content %> </p>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    
     <div class = "col-xs-3">
         
         <div class="panel panel-default">
@@ -25,15 +34,4 @@
     </div>
 </div>
 
-<!-- begin row 2 -->
 
-<div class = "row">
-    <div class = "col-xs-3">
-        
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <p>trends</p>
-          </div>
-        </div>
-    </div>
-</div>
