--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -17,14 +17,17 @@
           </div>
         </div>
     </div>
+    
     <div class = "col-xs-6">
-        
+      <% for @p in @posts %>
         <div class="panel panel-default">
           <div class="panel-body">
-            <p>tweets</p>
+            <p> <%= @p.content %> </p>
           </div>
         </div>
+      <% end %>
     </div>
+    
     <div class = "col-xs-3">
         
         <div class="panel panel-default">
@@ -32,14 +35,6 @@
             <p>who to follow</p>
           </div>
         </div>
-    </div>
-</div>
-
-<!-- begin row 3 -->
-
-<div class = "row">
-    <div class = "col-xs-3 col-xs-offset-9">
-        
         <div class="panel panel-default">
           <div class="panel-body">
             <p>trends</p>
